--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="two_class.js" defer></script>
+    <script src="two_main.js" defer></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script src="Two_class.js" defer></script>
-    <script src="Two_main.js" defer></script>
-    <title>Document</title>
+    <title>Two Piece</title>
 </head>
 <body>
+    <canvas id="des" width="950" height="630"></canvas>
     
 </body>
 </html>
